; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngset.c_add_one_chunk.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libpng/extr_pngset.c_add_one_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PNG_HANDLE_CHUNK_AS_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i32, i32, i32)* @add_one_chunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_one_chunk(i64* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i64* %0, i64** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %27, %4
  %12 = load i32, i32* %10, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp ult i32 %12, %13
  br i1 %14, label %15, label %32

15:                                               ; preds = %11
  %16 = load i64*, i64** %6, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i64 @memcmp(i64* %16, i32 %17, i32 4)
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %15
  %21 = load i32, i32* %9, align 4
  %22 = sext i32 %21 to i64
  %23 = load i64*, i64** %6, align 8
  %24 = getelementptr inbounds i64, i64* %23, i64 4
  store i64 %22, i64* %24, align 8
  %25 = load i32, i32* %7, align 4
  store i32 %25, i32* %5, align 4
  br label %48

26:                                               ; preds = %15
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %10, align 4
  %29 = add i32 %28, 1
  store i32 %29, i32* %10, align 4
  %30 = load i64*, i64** %6, align 8
  %31 = getelementptr inbounds i64, i64* %30, i64 5
  store i64* %31, i64** %6, align 8
  br label %11

32:                                               ; preds = %11
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* @PNG_HANDLE_CHUNK_AS_DEFAULT, align 4
  %35 = icmp ne i32 %33, %34
  br i1 %35, label %36, label %46

36:                                               ; preds = %32
  %37 = load i32, i32* %7, align 4
  %38 = add i32 %37, 1
  store i32 %38, i32* %7, align 4
  %39 = load i64*, i64** %6, align 8
  %40 = load i32, i32* %8, align 4
  %41 = call i32 @memcpy(i64* %39, i32 %40, i32 4)
  %42 = load i32, i32* %9, align 4
  %43 = sext i32 %42 to i64
  %44 = load i64*, i64** %6, align 8
  %45 = getelementptr inbounds i64, i64* %44, i64 4
  store i64 %43, i64* %45, align 8
  br label %46

46:                                               ; preds = %36, %32
  %47 = load i32, i32* %7, align 4
  store i32 %47, i32* %5, align 4
  br label %48

48:                                               ; preds = %46, %20
  %49 = load i32, i32* %5, align 4
  ret i32 %49
}

declare dso_local i64 @memcmp(i64*, i32, i32) #1

declare dso_local i32 @memcpy(i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
